@@ -813,6 +813,9 @@ of events are generated by non-blocking peer-to-peer MPI function calls. If
 <tt>XNONBLOCK</tt> is not set, an OTF2_MPI_Send event is created at the non-blocking send
 call and an OTF2_MPI_Recv event is recorded when a non-blocking receive request has
 completed.
+<b>Measurements without the <tt>XNONBLOCK</tt> flag are deprecated</b>:
+Set it either explicitly, or by enabling one of the presets <tt>DEFAULT</tt>
+or <tt>ALL</tt>.
 If <tt>XNONBLOCK</tt> is set, an OTF2_Isend event is recorded at the
 non-blocking send and an OTF2_IsendComplete event when the event was
 completed. Furthermore, on a non-blocking receive, it records an
